<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_overview_store">Shoppinglist ordered by market</string>
    <string name="app_name">Shoppinglist</string>
    <string name="overview_alphabetically">Alphabetical overview</string>
    <string name="store_products_view">Shoppinglist for</string>
    <string name="actionbar_add_new_product">+ Product </string>
    <string name="popup_button_clear_store_list">delete market list</string>
    <string name="label_add_new_product_quantity">count:</string>
    <string name="label_add_new_product_unit">units:</string>
    <string name="label_add_new_product_name">label:</string>
    <string name="label_add_new_product_store">market:</string>
    <string name="label_add_new_store_name">name:</string>
    <string name="label_add_new_unit_name">name:</string>
    <string name="label_add_new_favoritelist_name">name:</string>
    <string name="button_confirm_adding">Add</string>
    <string name="title_add_new_product">Add product to shoppinglist</string>
    <string name="title_add_new_product_to_favorite">Add product to shoppinglist</string>
    <string name="popup_button_delete">delete</string>
    <string name="popup_button_change">edit</string>
    <string name="actionbar_options">Settings</string>
    <string name="actionbar_delete_shoppinglist">delete shoppinglist</string>
    <string name="actionbar_manage_stores">manage markets</string>
    <string name="actionbar_share_list">share list</string>
    <string name="actionbar_manage_units">manage units</string>
    <string name="label_view_type">view:</string>
    <string name="radio_button_view_type_store">order by market</string>
    <string name="radio_button_view_type_alphabetically">alphabetical</string>
    <string name="title_user_configuration">Settings</string>
    <string name="title_overview_alphabetically">alphabetical shoppinglist</string>
    <string name="title_edit_product">edit product</string>
    <string name="icon_description_checked">already bought</string>
    <string name="title_manage_stores">manage stores</string>
    <string name="title_manage_units">manage units</string>
    <string name="actionbar_manage_favorites">manage favorites</string>
    <string name="title_manage_favorites">manage favorites</string>
    <string name="actionbar_add_new_store">+ market </string>
    <string name="actionbar_add_new_unit">+ unit</string>
    <string name="title_add_store">add market</string>
    <string name="title_edit_store">edit market</string>
    <string name="title_add_unit">add unit</string>
    <string name="title_edit_unit">edit unit</string>
    <string name="title_add_favoritelist">add favorite list</string>
    <string name="title_edit_name_favoritelist">edit favorite name</string>
    <string name="button_text_save">save</string>
    <string name="button_add_to_history">move to history</string>
    <string name="title_history">History</string>
    <string name="actionbar_delete_history">delete history</string>
    <string name="actionbar_show_history">show history</string>
    <string name="actionbar_add_favorite_list">+ list</string>
    <string name="popup_button_change_favoritelist_products">edit content</string>
    <string name="popup_button_change_favorite_name">edit name</string>
    <string name="popup_button_add_favoritelist_to_shoppinglist">add list to shoppinglist</string>
    <string name="user_configuration_export_import">export / import</string>
    <string name="user_configuration_email">email</string>
    <string name="export_email_email_address">email address:</string>
    <string name="export_email_send">send</string>
    <string name="export_email_invalid_email">invalid email</string>
    <string name="export_email_send_via">send list via...</string>
    <string name="export_email_email_export">email export</string>
    <string name="export_email_at_which_store">at</string>
    <string name="google_docs">Google Drive</string>
    <string name="export_email_current_shoppinglist">the current shoppinglist</string>
    <string name="widget_title">Shoppinglist</string>
    <string name="widget_at_which_store">at</string>
    <string name="widget_image_checkbox_description">bought?</string>
    <string name="widget_image_stripline_description">stripline</string>
    <string name="export_google_drive_title">Google Drive export</string>
    <string name="export_google_drive_file_name">Filename:</string>
    <string name="export_google_button_export">export</string>
    <string name="import_google_button">import</string>
    <string name="import_google_drive_title">Google Drive import</string>
    <string name="popup_google_import_file_title">select shoppinglist ...</string>
    <string name="button_abort">cancel</string>
    <string name="sqlstatement_not_specified">not specified</string>
    <string name="sqlstatement_liter">liter</string>
    <string name="sqlstatement_kilogram">kilogram</string>
    <string name="sqlstatement_packets">packets</string>
    <string name="sqlstatement_gram">gram</string>

</resources>
